--- a/res/layout/act_recording.xml
+++ b/res/layout/act_recording.xml
@@ -59,17 +59,6 @@
         android:onClick="previousAccActivity"
         android:text="Prev" />
 
-    <EditText
-        android:id="@+id/typeText"
-        android:inputType="number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/startRecordingButton"
-        android:layout_alignBottom="@+id/startRecordingButton"
-        android:layout_toRightOf="@+id/startRecordingButton"
-        android:ems="10"
-        android:text="1" />
-
     <Button
         android:id="@+id/startRecordingButton"
         android:layout_width="wrap_content"
@@ -130,5 +119,27 @@
 
   
     </EditText>
+
+    <Spinner
+        android:id="@+id/typeSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/accActivityDetailText"
+        android:layout_alignTop="@+id/saveButton"
+        android:layout_toLeftOf="@+id/saveButton"
+        android:layout_toRightOf="@+id/startRecordingButton"
+        android:ems="10"
+        android:entries="@array/actTypeArray"
+        android:inputType="number"
+        android:text="1" />
+
+    <Button
+        android:id="@+id/idButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/saveButton"
+        android:layout_alignRight="@+id/saveButton"
+        android:layout_below="@+id/saveButton"
+        android:text="ID!" />
 
 </RelativeLayout>
