--- a/res/layout/act_recording.xml
+++ b/res/layout/act_recording.xml
@@ -108,30 +108,6 @@
         android:inputType="number"
         android:text="1" />
 
-    <Spinner
-        android:id="@+id/displaySpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/rateText"
-        android:layout_alignParentBottom="true"
-        android:layout_alignTop="@+id/nextAccActivityButton"
-        android:layout_toLeftOf="@+id/nextAccActivityButton"
-        android:entries="@array/displayType" />
-
-    <EditText
-        android:id="@+id/rateText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/nextAccActivityButton"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:hint="0 crossing jump"
-        android:inputType="number"
-        android:text="4" >
-
-        <requestFocus />
-    </EditText>
-
     <Button
         android:id="@+id/idButton"
         android:layout_width="wrap_content"
@@ -147,7 +123,38 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/idButton"
         android:layout_toRightOf="@+id/typeSpinner"
-        android:onClick="identify"
+        android:onClick="remove"
         android:text="Del" />
+    
+    <Button
+        android:id="@+id/purge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/delete"
+        android:layout_toRightOf="@+id/typeSpinner"
+        android:onClick="purge"
+        android:text="Purge" />
+
+    <EditText
+        android:id="@+id/rateText"
+        android:layout_width="16dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/purge"
+        android:layout_toRightOf="@+id/typeSpinner"
+        android:ems="10"
+        android:hint="0 crossing jump"
+        android:inputType="number"
+        android:text="4" />
+
+    <Spinner
+        android:id="@+id/displaySpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/typeSpinner"
+        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/nextAccActivityButton"
+        android:layout_toLeftOf="@+id/nextAccActivityButton"
+        android:entries="@array/displayType" />
     
 </RelativeLayout>
